--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "rust-osero"
 version = "0.1.0"
 edition = "2021"
-
+assets = "assets"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+once_cell = "1.19.0"
 rand = "0.8.5"
+rusqlite = "0.31.0"
